fix: the overflow issue on mobile

--- a/client/src/components/singlepost/singlePost.css
+++ b/client/src/components/singlepost/singlePost.css
@@ -1,177 +1,180 @@
 .singlePost {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 40px 150px 80px 100px;
-    text-align: left;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 150px 80px 100px;
+  text-align: left;
 }
 
 .singlePostMenuTitle {
-    font-family: "Space Grotesk";
-    font-size: 30px;
-    font-weight: 700;
-    margin-bottom: 20px;
+  font-family: "Space Grotesk";
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .singlePostForm {
-    font-family: "Open Sans";
-    font-size: 20px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
+  font-family: "Open Sans";
+  font-size: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .singlePostFormItem {
-    position: relative;
-    font-family: "Open Sans";
-    font-size: 20px;
-    margin: 20px 40px 10px 40px;
+  position: relative;
+  font-family: "Open Sans";
+  font-size: 20px;
+  margin: 20px 40px 10px 40px;
 }
 
 .singlePostInput {
-    display: flex;
-    align-items: center;
-    padding: 20px 30px;
+  display: flex;
+  align-items: center;
+  padding: 20px 30px;
 }
 
 .singlePostIcons {
-    display: flex;
-    flex-direction: row;
-    margin-left: 85%;
-    font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 85%;
+  font-size: 16px;
 }
 
 .singlePostIcon {
-    font-size: 30px;
-    margin-left: 30px;
-    cursor: pointer;
+  font-size: 30px;
+  margin-left: 30px;
+  cursor: pointer;
 }
 
 .singlePostIcon:first-child {
-    color: rgb(8, 14, 14);
+  color: rgb(8, 14, 14);
 }
 
 .singlePostIcon:last-child {
-    color: red;
+  color: red;
 }
 
 .singlePostInputTitle {
-    font-family: "Space Grotesk";
-    font-size: 20px;
-    border: none;
-    border-bottom: 1px solid lightgrey;
-    width: 70vw;
+  font-family: "Space Grotesk";
+  font-size: 20px;
+  border: none;
+  border-bottom: 1px solid lightgrey;
+  width: 70vw;
 }
 
 .singlePostInputTitle:focus {
-    outline: none;
+  outline: none;
 }
 
 .singlePostCatWrapper {
-    margin: 20px 0 30px 0;
+  margin: 20px 0 30px 0;
 }
 
 .singlePostImg {
-    max-width: 600px;
-    object-fit: cover;
+  max-width: 600px;
+  object-fit: cover;
 }
 
 .singlePostTitle {
-    color: #292929;
-    font-size: 50px;
-    font-family: "Space Grotesk";
+  color: #292929;
+  font-size: 50px;
+  font-family: "Space Grotesk";
 }
 
 .singlePostTitleInput {
-    font-family: "Space Grotesk";
-    font-size: 30px;
-    border: none;
-    width: 50vw;
+  font-family: "Space Grotesk";
+  font-size: 30px;
+  border: none;
+  width: 50vw;
 }
 
 .singlePostTitleInput:focus {
-    outline: none;
-    border: none;
-    color: grey;
-    border-bottom: 2px solid lightgrey;
+  outline: none;
+  border: none;
+  color: grey;
+  border-bottom: 2px solid lightgrey;
 }
 
 .singlePostContent {
-    margin-top: 40px;
-    max-width: 900px;
+  margin-top: 40px;
+  max-width: 900px;
+}
+
+.singlePostContent div {
+  width: auto !important;
 }
 
 .singlePostContent::first-letter {
-    font-size: 40px;
-    font-weight: 600;
+  font-size: 40px;
+  font-weight: 600;
 }
 
 .singlePostSubmitButton {
-    width: 150px;
-    height: 70px;
-    align-self: center;
-    border: none;
-    background-color: #8ffff3;
-    padding: 10px;
-    font-size: 20px;
-    font-family: "Space Grotesk";
-    font-weight: 700;
-    margin-top: 80px;
-    margin-bottom: 50px;
-    cursor: pointer;
+  width: 150px;
+  height: 70px;
+  align-self: center;
+  border: none;
+  background-color: #8ffff3;
+  padding: 10px;
+  font-size: 20px;
+  font-family: "Space Grotesk";
+  font-weight: 700;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
 
 .singlePostSubmitButton:hover {
-    color: white;
-    background-color: black;
+  color: white;
+  background-color: black;
 }
-
 
 /* mobile */
 
 @media (max-width: 800px) {
-    .singlePost {
-        width: 80%;
-        flex-direction: column;
-        margin: 40px 0 40px 0px;
-        align-items: unset;
-        justify-content: unset;
-    }
-    .singlePostImg {
-        width: 80%;
-        max-height: 300px;
-        object-fit: cover;
-    }
-    .singlePostContent {
-        width: 80%;
-    }
+  .singlePost {
+    width: 80%;
+    flex-direction: column;
+    margin: 40px 0 40px 0px;
+    align-items: unset;
+    justify-content: unset;
+  }
+  .singlePostImg {
+    width: 80%;
+    max-height: 300px;
+    object-fit: cover;
+  }
+  .singlePostContent {
+    width: 100%;
+  }
 }
 
-@media (min-width: 800px) and (max-width:1000px) {
-    .singlePost {
-        width: 80%;
-        flex-direction: column;
-        margin: 40px 0 10px 0px;
-        align-items: unset;
-        justify-content: unset;
-    }
-    .topRight {
-        justify-content: center;
-        margin: 0px
-    }
-    .singlePostContent {
-        width: 80%;
-    }
+@media (min-width: 800px) and (max-width: 1000px) {
+  .singlePost {
+    width: 80%;
+    flex-direction: column;
+    margin: 40px 0 10px 0px;
+    align-items: unset;
+    justify-content: unset;
+  }
+  .topRight {
+    justify-content: center;
+    margin: 0px;
+  }
+  .singlePostContent {
+    width: 80%;
+  }
 }
 
-@media (min-width: 1000px) and (max-width:1200px) {
-    .singlePostT {
-        width: 80%;
-        flex-direction: column;
-        margin: 40px 0 0px 0px;
-        align-items: unset;
-        justify-content: unset;
-    }
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .singlePostT {
+    width: 80%;
+    flex-direction: column;
+    margin: 40px 0 0px 0px;
+    align-items: unset;
+    justify-content: unset;
+  }
 }
